WIP: Clean up transformations